--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
   </head>
   <body>
     <header>
-        <section id="works">
-        <div class="works-box"><img src="./images/img_top_soccer.jpg" alt="top画像">
+        <div class="works-box">
         </div>
-        </section>
     </header>
     <main>
       <section id="skills">
